@@ -1,0 +1,18 @@
+module boohu
+
+go 1.17
+
+require (
+	codeberg.org/anaseto/gothic v0.2.0
+	github.com/gdamore/tcell/v2 v2.6.0
+)
+
+require (
+	github.com/gdamore/encoding v1.0.0 // indirect
+	github.com/lucasb-eyer/go-colorful v1.2.0 // indirect
+	github.com/mattn/go-runewidth v0.0.14 // indirect
+	github.com/rivo/uniseg v0.4.3 // indirect
+	golang.org/x/sys v0.5.0 // indirect
+	golang.org/x/term v0.5.0 // indirect
+	golang.org/x/text v0.7.0 // indirect
+)
